; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_pid.c_ts_bsearch_searchkey_Compare.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_pid.c_ts_bsearch_searchkey_Compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.searchkey = type { i64, i8* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @ts_bsearch_searchkey_Compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ts_bsearch_searchkey_Compare(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.searchkey*, align 8
  %6 = alloca %struct.TYPE_2__**, align 8
  %7 = alloca %struct.TYPE_2__*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.searchkey*
  store %struct.searchkey* %9, %struct.searchkey** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_2__**
  store %struct.TYPE_2__** %11, %struct.TYPE_2__*** %6, align 8
  %12 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %6, align 8
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  store %struct.TYPE_2__* %13, %struct.TYPE_2__** %7, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load %struct.searchkey*, %struct.searchkey** %5, align 8
  %16 = getelementptr inbounds %struct.searchkey, %struct.searchkey* %15, i32 0, i32 1
  store i8* %14, i8** %16, align 8
  %17 = load %struct.searchkey*, %struct.searchkey** %5, align 8
  %18 = getelementptr inbounds %struct.searchkey, %struct.searchkey* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp sge i64 %19, %22
  br i1 %23, label %24, label %32

24:                                               ; preds = %2
  %25 = load %struct.searchkey*, %struct.searchkey** %5, align 8
  %26 = getelementptr inbounds %struct.searchkey, %struct.searchkey* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = sub nsw i64 %27, %30
  br label %33

32:                                               ; preds = %2
  br label %33

33:                                               ; preds = %32, %24
  %34 = phi i64 [ %31, %24 ], [ -1, %32 ]
  %35 = trunc i64 %34 to i32
  ret i32 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
